# homework_10_1

./: .gitignore  README.md  main.py  pyproject.toml  test_log.txt
data/: transactions_excel.csv
src/: __init__.py  processing.py  types.py  widget.py
src/decorators/: __init__.py  log_decorator.py
src/external_api/: currency.py
src/generators/: __init__.py  core.py
src/masks/: __init__.py  masking.py  masks.py
src/utils/: __init__.py  file_operations.py  file_readers.py  logger.py
test/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
test/test_external_api/: test_currency.py
test/test_utils/: test_file_operations.py  test_file_readers.py
tests/: test_masks.py
