[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Kris-KK-Mod",email = "kriskurchaeva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119
force_single_line = true
known_first_party = ["src"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "FIRSTPARTY"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
namespace_packages = true
